shipwright-liveview/shipwright-liveview-macros/tests/compile_fail/invalid_element_name.rs
use shipwright_liveview_macros::html;

fn main() {
    // This should fail: element name cannot start with a number
    let _ = html! {
        <123invalid></123invalid>
    };
}